header fix: z-index 4

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -70,7 +70,7 @@
                     background-color: $color-d
                     height: 100vh
                     width: 200px
-                    z-index: 1
+                    z-index: 4
                     box-shadow: -1px 3px 10px -4px black
                     transition-duration: 0.5s
                     padding-top: 40px
