--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ h2 {
     background-color: #ffffff;
     height: 100vh;
     width: 200px;
-    z-index: 1;
+    z-index: 4;
     box-shadow: -1px 3px 10px -4px black;
     transition-duration: 0.5s;
     padding-top: 40px;
